--- a/SpointLiteVersion/Views/Shared/_Layout.cshtml
+++ b/SpointLiteVersion/Views/Shared/_Layout.cshtml
@@ -50,20 +50,7 @@
                                 <img src="~/Content/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 <span class="hidden-xs">Usuario1</span>
                             </a>
-                            <ul class="dropdown-menu">
-                                <!-- User image -->
-                                <li class="user-header">
-                                    <img src="~/Content/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-
-                                    <p>
-                                        Usuario1- Web Developer
-                                        <small>ejemplo</small>
-                                    </p>
-                                </li>
-                                <!-- Menu Body -->
-                                <!-- Menu Footer-->
-
-                            </ul>
+                         
                         </li>
                         <!-- Control Sidebar Toggle Button -->
 
@@ -147,6 +134,10 @@
                     </li>
                     <li class="">
                         <a class="collapse-item emp" href="@Url.Action("Index","facturas")"><i class="fas fa-shopping-cart"></i> <span>Facturas</span></a>
+
+                    </li>
+                    <li class="">
+                        <a class="collapse-item emp" href="@Url.Action("CotizacionesIndex","facturas")"><i class="fas fa-shopping-cart"></i> <span>Cotizaciones</span></a>
 
                     </li>
                     <li class="">
