--- a/SpointLiteVersion/Views/facturas/CotizacionesIndex.cshtml
+++ b/SpointLiteVersion/Views/facturas/CotizacionesIndex.cshtml
@@ -4,83 +4,117 @@
     ViewBag.Title = "CotizacionesIndex";
 }
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-9 modal-content contedor" style="width:90%; margin-left:4%; margin-top:2%;">
+            <h2 style="margin-left:30px; margin-bottom:35px;">Cotizaciones</h2>
+            <div class="row">
+                <div class="modal-content" style="width:88%; margin-left:4%; margin-top:2%;">
+                    <table class="table  table-hover t tabla" id="tabla">
+                        <thead>
+
+                            <tr>
+                                <th>
+                                    @Html.DisplayName("ID")
+                                </th>
+
+                                <th>
+                                    @Html.DisplayName("FECHA")
+                                </th>
+                                <th>
+                                    @Html.DisplayName("TOTAL")
+                                </th>
+                                <th>
+                                    @Html.DisplayName("CLIENTE")
+                                </th>
+
+                                
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.idcotizacion)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.fecha)
+                                </td>
+                                <td class="total">
+                                    @Html.DisplayFor(modelItem => item.Total)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.cliente)
+                                </td>
+                               
 
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.fecha)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.observacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.cliente)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.vendedor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.precio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.credito)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.idventa)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Total)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.idcliente)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.totalitbis)
-        </th>
-        
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.observacion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.cliente)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.vendedor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.precio)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.credito)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.idventa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Total)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.idcliente)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.totalitbis)
-        </td>
-       
-    </tr>
-}
 
-</table>
+                                <td>
+                                    <a href="@Url.Action("Edit","productos1",new { id=item.idcotizacion})"><i class="fas fa-edit eliminar"></i></a> |
+                                    <a href="@Url.Action("Detailscotizacion","facturas",new { id=item.idventa})" target="_blank"><i class="fas fa-eye eliminar"></i></a> |
+                                    <a href="@Url.Action("Delete","productos1",new { id=item.idcotizacion})"><i class="fas fa-trash-alt eliminar eli"></i></a>
+
+
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="~/Content/bower_components/jquery/dist/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#tabla').DataTable({
+            "pagingType": "full_numbers", // "simple" option for 'Previous' and 'Next' buttons only
+            "language": {
+                "decimal": "",
+                "emptyTable": "NO HAY INFORMACION",
+                "info": "MOSTRANDO _START_ A _END_ de _TOTAL_ ENTRADAS",
+                "infoEmpty": "MOSTRANDO 0 to 0 of 0 ENTRADAS",
+                "infoFiltered": "(FILTRADO DE _MAX_ TOTAL ENTRADAS)",
+                "infoPostFix": "",
+                "thousands": ",",
+                "lengthMenu": "MOSTRAR _MENU_ ENTRADAS",
+                "loadingRecords": "CARGANDO...",
+                "processing": "PROCESANDO...",
+                "search": "BUSCAR:",
+                "zeroRecords": "SIN RESULTADOS ENCONTRADOS",
+                "paginate": {
+                    "first": "PRIMERO",
+                    "last": "ULTIMO",
+                    "next": "SIGUIENTE",
+                    "previous": "ANTERIOR"
+                }
+            }
+        });
+        $('.dataTables_length').addClass('bs-select');
+    });
+</script>
+<script>
+
+
+    $(document).ready(function () {
+        $("td.total").each(function () { $(this).html(parseFloat($(this).text()).toLocaleString('en-US', { style: 'currency', currency: 'USD' })); });
+        //$("td.precio1").each(function () { $(this).html(parseFloat($(this).text()).toLocaleString('en-US', { style: 'currency', currency: 'USD' })); });
+    });
+
+        //var autoNumericInstance = new AutoNumeric('#tabla td', AutoNumeric.getPredefinedOptions().numericPos.dotDecimalCharCommaSeparator);
+
+
+        //$("#tabla td").autoNumeric('init', { aSign: "$ ", decimalCharacter: ",", lZero: "deny" });
+        //$("#tabla td").numeric(",");
+
+    //$("#itbis").numeric(",");
+
+
+</script>
