--- a/SpointLiteVersion/Views/facturas/Create.cshtml
+++ b/SpointLiteVersion/Views/facturas/Create.cshtml
@@ -1105,7 +1105,7 @@
 
             //alertify.alert("INGRESE DATOS");
             console.info(json);
-        var miUrl = '@Url.Action("Cotizar", "facturas")'
+            var miUrl = '@Url.Action("Cotizar", "facturas")';
 
             $.ajax({
                 url: miUrl,
