--- a/SpointLiteVersion/Views/facturas/Create.cshtml
+++ b/SpointLiteVersion/Views/facturas/Create.cshtml
@@ -1053,7 +1053,7 @@
 </script>
 
 @*para realizar las cotizaciones de aqui en adelante*@
-
+@*hola*@
 <script>
 
     $(document).ready(function () {
